--- a/pom.xml
+++ b/pom.xml
@@ -40,18 +40,11 @@
             <version>2.8.8</version>
         </dependency>
 
-        <!-- AWS S3 SDK Dependency (allows S3 versatility in lambda) -->
+        <!-- AWS DynamoDB/Java Driver -->
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-s3</artifactId>
-            <version>1.12.65</version>
-        </dependency>
-
-        <!-- Apache Commons File Uploader -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.12.62</version>
         </dependency>
 
         <!-- Development Dependencies -->
