--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>${aws.sdk.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>2.17.40</version>
+        </dependency>
+
         <!-- JSON Parsing Software -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -42,9 +48,15 @@
 
         <!-- AWS DynamoDB/Java Driver -->
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-dynamodb</artifactId>
-            <version>1.12.62</version>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>dynamodb</artifactId>
+            <version>2.17.40</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>dynamodb-enhanced</artifactId>
+            <version>2.17.40</version>
         </dependency>
 
         <!-- Development Dependencies -->
